tests/NormalTests/paczka1/fuzzy1/71953647.err
Error in line 8: WgqwLIFm S413 24,98
Error in line 9: iRoqmStmd S605 28,9
Error in line 16: s3InN A494 377,5
Error in line 15: LCp6eOGCU A494 14,5
Error in line 2: WgqwLIFm S413 15,5
Error in line 19: LCp6eOGCU S413 79,3
Error in line 20: WgqwLIFm A494 42,5
